Fixed: overflow of items when container is too narrow.

--- a/src/css/components/Parameters.css
+++ b/src/css/components/Parameters.css
@@ -17,6 +17,10 @@
     grid-column-end: span 3;
   }
 
+  &--narrow .Parameters_Parameter--spreadLarge {
+    grid-column-end: span 2;
+  }
+
   & .Parameters_Parameter--spreadFull {
     grid-column: 1 / -1;
   }
